--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    :root {
+      --color-header: #52525b;
+      --color-txtLight: #e7e5e4;
+    }
+}
+
+@layer components{
+ .input{
+    @apply rounded-sm bg-stone-200 p-1 outline-none border-b-2 border-stone-200 focus:border-black
+ }
+}
+
 *{
-    font-family: "Poppins", sans-serif;
+    /* font-family: "Poppins", sans-serif; */
+    font-family: "Montserrat", sans-serif;
+}
+body{
+    overflow-x: hidden;
+    
+}
+
+hr {
+    display: block;
+    height: 2px;
+    border: 0;
+    border-top: 2px solid #ccccccbe;
+    margin: 1em 0;
+    padding: 0;
 }
